--- a/package.json
+++ b/package.json
@@ -5,16 +5,10 @@
   "scripts": {
     "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.8.4",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.26.0",
-    "playwright": "^1.43.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "puppeteer": "^21.3.8"
   }
 }
