--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
-node_modules/ 
+# Ignorar node_modules
+node_modules/
+
+# Ignorar sesiones de WhatsApp
+.wwebjs_auth/
+.wwebjs_cache/
+
+# Archivos de entorno (por si usas variables con dotenv)
+.env
+
+# Archivos del sistema
+.DS_Store
+Thumbs.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Salida temporal de PM2 (opcional si usas logs locales)
+*.log
+
+# Archivos de configuración de sistema/editor (VSCode, etc)
+.vscode/
+.idea/
